Add modal to show game result
Signed-off-by: An Cao <kcj.pop.com@gmail.com>

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "minireset.css": "0.0.3",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
+    "react-modal": "^3.4.4",
     "react-scripts": "1.1.4"
   },
   "scripts": {
